# singtown-ai-python

./: .gitignore  Development.md  Dockerfile  MANIFEST.in  README-CN.md  README.md  metrics.csv  pyproject.toml  setup.py  test.py
.github/workflows/: python-publish.yml
singtown_ai/: __init__.py  client.py  dryrun.py  exporter.py  mock.py  mock_runner.py  runner.py  train.py  type.py  utils.py  watcher.py
unittests/: conftest.py  test_client.py  test_dryrun.py  test_export_class_folder.py  test_export_yolo.py  test_filewatcher.py  test_stdoutwatcher.py
