[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "singtown_ai"
version = "1.0.0"
description = "SingTown AI Python Client"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic",
    "requests",
    "requests-mock",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "build",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["singtown_ai"]

[tool.setuptools.package-data]
singtown_ai = ["dataset/*"]

[tool.pytest.ini_options]
testpaths = ["unittests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=singtown_ai",
    "--cov-report=term-missing",
    "--cov-report=html",
]
